--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.virtualdeck">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.VirtualDeck">
+        android:theme="@style/Theme.VirtualDeck"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".EditDeckCardsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateDeckActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewDeckCardsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditCardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewCardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateCardActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
