--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'net.gotev:uploadservice:2.1'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
 }
