--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.VirtualDeck"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".FriendListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FindUsernameActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectUsernameActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GoogleLoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditDeckCardsActivity"
             android:exported="false" />
         <activity
